name:                webbing
version:             0.1.0.0
synopsis:            Stuff
description:         Ssttuuffff
license:             MIT
license-file:        LICENSE
author:              Eric Conlon
maintainer:          ejconlon@gmail.com
copyright:           (c) 2014 Eric Conlon, all rights reserved
category:            Webbing
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
        README.md ,
        LICENSE

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
        base >=4.6 && <4.8,
        blaze-html ,
        persistent ,
        scotty

executable webbing-exec
  default-language: Haskell2010
  hs-source-dirs: exec
  main-is: Main.hs
  Build-depends:
        base ,
        persistent-postgresql ,
        scotty ,
        wai-extra ,
        webbing

test-suite webbing-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  build-depends:
        base ,
        hspec-wai ,
        persistent-sqlite ,
        scotty ,
        webbing
